--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas
-numpy
-matplotlib
-scikit-learn
-tensorflow
-plotly
-gunicorn
+flask==2.3.3
+gunicorn==21.2.0
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.8.4
+scikit-learn==1.4.2
+tensorflow==2.15.0
+plotly==5.22.0
