--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-flask==2.3.3
-gunicorn==21.2.0
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.8.4
-scikit-learn==1.4.2
-tensorflow==2.15.0
-plotly==5.22.0
+pandas 
+numpy
+seaborn
+matplotlib
+scikit-learn
+catboost
+xgboost
+dill
+flask
+gunicorn
